Conexion con la base de datos

--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,13 @@
+
+{% extends '::base.html.twig' %}
+
+{% block title %}Hola {{ name }}!{% endblock %}
+{% block body %}
+
+{# Mostrar contenido de una variable {{ dump() }} #}
+
 Hola {{ name }}!
+{% endblock %}
+
+
+
