--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,12 +2,18 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Título por defecto{% endblock %}</title>
+        <link rel="stylesheet" href="{{ asset('bundles/bootstrap-3.3.2-dist/css/bootstrap.min.css') }}" media="screen"/>
         {% block css %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
+        
+        <script src="http://code.jquery.com/jquery.js"></script>
+        <script src="bundles/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
         {% block js %}{% endblock %}
     </body>
 </html>
