--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -2,11 +2,54 @@
 {% extends '::base.html.twig' %}
 
 {% block title %}Hola {{ name }}!{% endblock %}
-{% block body %}
 
+{% block css %}
+   {#
+   {% stylesheets 'atletismo/css/*' filter='cssrewrite' %}
+      <link rel="stylesheet" href="{{ index.css }}" />
+   {% endstylesheets %}
+   #}
+   {# {% stylesheets '@EasanlesAtletismoBundle/Resources/assets/css/index.css' %}{% endstylesheets %}#}
+   <link rel="stylesheet" href="{{ asset('bundles/atletismo/css/index.css') }}" />
+   
+{% endblock%}
+
+{% block body %}
 {# Mostrar contenido de una variable {{ dump() }} #}
 
-Hola {{ name }}!
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Atletismo</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Inicio</a></li>
+            <li><a href="#about">Atletas</a></li>
+            <li><a href="#contact">Competiciones</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class="container">
+
+      <div class="starter-template">
+        <h1>Hola {{ name }}!</h1>
+        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      </div>
+
+    </div><!-- /.container -->
+{% endblock %}
+
+{% block js %}
+
 {% endblock %}
 
 
