--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -17,34 +17,48 @@
 {% block body %}
 {# Mostrar contenido de una variable {{ dump() }} #}
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+   <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Atletismo</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Inicio</a></li>
-            <li><a href="#about">Atletas</a></li>
-            <li><a href="#contact">Competiciones</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+         <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+               <span class="sr-only">Toggle navigation</span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="./"><span class="glyphicon glyphicon-home"></span> Atletismo</a>
+         </div>
+         <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+               {% block navbar %}
+               <li><a class="inactive">Atletas</a></li>
+               <li><a href="./competiciones">Competiciones</a></li>
+               <li><a class="inactive">Records</a></li>
+               <li><a class="inactive">Noticias</a></li>
+               <li><a class="inactive">Informes</a></li>
+               <li><a class="inactive">Configuración</a></li>
+               {% endblock %}
+            </ul>
+            <ul class="navbar-text pull-right">
+               Bienvenido, <a class="navbar-link inactivenav">Administrador</a>
+            </ul>
+         </div><!--/.nav-collapse -->
       </div>
-    </nav>
+   </nav>
 
     <div class="container">
+       {% block breadcrumb %}
+       <ol class="breadcrumb">
+          <li class="active">Portada Admin</li>
+       </ol>
+       {% endblock %}
+       {% block container %}
+       <div>
+          <h1>Hola {{ name }}!</h1>
+          <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+       </div>
 
-      <div class="starter-template">
-        <h1>Hola {{ name }}!</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-
+       {% endblock %}
     </div><!-- /.container -->
 {% endblock %}
 
