--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,8 +12,8 @@
     <body>
         {% block body %}{% endblock %}
         
-        <script src="http://code.jquery.com/jquery.js"></script>
-        <script src="bundles/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="{{ asset('bundles/bootstrap-3.3.2-dist/js/bootstrap.min.js') }}"></script>
         {% block js %}{% endblock %}
     </body>
 </html>
