--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -18,9 +18,9 @@
 {# Mostrar contenido de una variable {{ dump() }} #}
 
    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+      <div class="container-fluid">
          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                <span class="sr-only">Toggle navigation</span>
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
@@ -40,7 +40,7 @@
                {% endblock %}
             </ul>
             <ul class="navbar-text pull-right">
-               Bienvenido, <a class="navbar-link inactivenav">Administrador</a>
+               Bienvenido, <a class="navbar-link inactive">Admin</a>
             </ul>
          </div><!--/.nav-collapse -->
       </div>
@@ -53,7 +53,7 @@
        </ol>
        {% endblock %}
        {% block container %}
-       <div>
+       <div class="container-fluid">
           <h1>Hola {{ name }}!</h1>
           <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
        </div>
