--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/listado_competiciones.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/listado_competiciones.html.twig
@@ -10,7 +10,7 @@
       <li><a class="inactive">Records</a></li>
       <li><a class="inactive">Noticias</a></li>
       <li><a class="inactive">Informes</a></li>
-      <li><a class="inactive">Configuración</a></li>
+      <li><a href="./configuracion">Configuración</a></li>
    </ul>
 {% endblock %}
 
