--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -36,7 +36,7 @@
                <li><a class="inactive">Records</a></li>
                <li><a class="inactive">Noticias</a></li>
                <li><a class="inactive">Informes</a></li>
-               <li><a class="inactive">Configuración</a></li>
+               <li><a href="./configuracion">Configuración</a></li>
                {% endblock %}
             </ul>
             <ul class="navbar-text pull-right">
