--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
@@ -24,8 +24,8 @@
 {% block container %}
    <h1 id="container_title" class="row page-header">Configuración de la aplicación</h1>
    <div id="container_header" class="row">
-      <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-save"></span> Poblar BD</button>
-      <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-remove-circle"></span> Borrar BD</button>
+      <a href="{{ path('configuracion_poblarbd') }}" class="btn btn-primary"><span class="glyphicon glyphicon-save"></span> Poblar BD</a>
+      <a href="{{ path('configuracion_borrarbd') }}" class="btn btn-danger"><span class="glyphicon glyphicon-remove-circle"></span> Borrar BD</a>
    </div>
 
    
