Panel Profiler personalizado

--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
@@ -4,7 +4,6 @@
 {% block title %}Configuración de la aplicación{% endblock %}
 
 {% block navbar %}
-{# Mostrar contenido de una variable {{ dump() }} #}
       <li><a class="inactive">Atletas</a></li>
       <li><a href="./competiciones">Competiciones</a></li>
       <li><a class="inactive">Records</a></li>
@@ -28,6 +27,7 @@
       <a href="{{ path('configuracion_borrarbd') }}" class="btn btn-danger" title="DELETE FROM ;"><span class="glyphicon glyphicon-remove-circle"></span> Borrar datos BD</a>
       <a href="{{ path('configuracion_rehacerbd') }}" class="btn btn-danger" title="doctrine:database:drop --force&#10;doctrine:database:create&#10;doctrine:schema:update --force&#10;doctrine:fixtures:load --append"><span class="glyphicon glyphicon-refresh"></span> Rehacer BD</a>
       <a href="{{ path('configuracion_limpiarcache') }}" class="btn btn-default" title="cache:clear&#10;cache:clear --env=prod"><span class="glyphicon glyphicon-trash"></span> Limpiar cache</a>
+      <a href="#" class="btn btn-normal inactive" title="assetic:dump"><span class="glyphicon glyphicon-refresh"></span> Assetic dump</a>
       </div>
 
    
