Alerts y tooltips incluidos

--- a/src/Easanles/AtletismoBundle/Resources/views/Collector/atletismo_version.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Collector/atletismo_version.html.twig
@@ -7,7 +7,11 @@
    <div class="sf-toolbar-block"  style="padding: 5px 8px;">
 	   <div class="sf-toolbar-info">
    	   <div class="sf-toolbar-info-piece">
-      	   <b>App Version</b>
+      	   <b>Iteración</b>
+            <span>{{ collector.getIteration }}</span>
+         </div>
+         <div class="sf-toolbar-info-piece">
+      	   <b>Versión</b>
             <span class="sf-toolbar-status">{{ collector.getVersion }}</span>
          </div>
       </div>
