--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
@@ -5,7 +5,7 @@
 
 {% block navbar %}
       <li><a class="inactive">Atletas</a></li>
-      <li><a href="./competiciones">Competiciones</a></li>
+      <li><a href="{{ webRootDir }}competiciones/">Competiciones</a></li>
       <li><a class="inactive">Records</a></li>
       <li><a class="inactive">Noticias</a></li>
       <li><a class="inactive">Informes</a></li>
