--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -26,13 +26,13 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="./"><span class="glyphicon glyphicon-home"></span> Atletismo</a>
+            <a class="navbar-brand" href="{{ webRootDir }}"><span class="glyphicon glyphicon-home"></span> Atletismo</a>
          </div>
          <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                {% block navbar %}
                <li><a class="inactive">Atletas</a></li>
-               <li><a href="./competiciones">Competiciones</a></li>
+               <li><a href="./competiciones/">Competiciones</a></li>
                <li><a class="inactive">Records</a></li>
                <li><a class="inactive">Noticias</a></li>
                <li><a class="inactive">Informes</a></li>
