--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
@@ -5,17 +5,17 @@
 
 {% block navbar %}
       <li><a class="inactive">Atletas</a></li>
-      <li><a href="{{ webRootDir }}competiciones/">Competiciones</a></li>
+      <li><a href="../competiciones/">Competiciones</a></li>
       <li><a class="inactive">Records</a></li>
       <li><a class="inactive">Noticias</a></li>
       <li><a class="inactive">Informes</a></li>
-      <li class="active"><a href="#">Configuración</a></li>
+      <li class="active"><a href="./">Configuración</a></li>
    </ul>
 {% endblock %}
 
 {% block breadcrumb %}
 <ol class="breadcrumb">
-  <li><a href="./">Portada Admin</a></li>
+  <li><a href="../">Portada Admin</a></li>
   <li class="active">Configuración</li>
 </ol>
 {% endblock %}
