--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
@@ -10,34 +10,58 @@
       <li><a class="inactive">Noticias</a></li>
       <li><a class="inactive">Informes</a></li>
       <li><a href="../../configuracion/">Configuración</a></li>
-   </ul>
 {% endblock %}
 
 {% block breadcrumb %}
-<ol class="breadcrumb">
   <li><a href="../../">Portada Admin</a></li>
   <li><a href="../">Competiciones</a></li>
   <li class="active">{{ com.nombre }} ({{ com.temp }})</li>
-</ol>
 {% endblock %}
 
 {% block container %}
    <h1 id="container_title" class="row page-header">{{ com.nombre }} ({{ com.temp }})</h1>
-   <dl class="dl-horizontal"><dt>Nombre</dt><dd>{{ com.nombre }}</dd></dl>
-   <dl class="dl-horizontal"><dt>Temporada</dt><dd>{{ com.temp }}</dd></dl>
-   <dl class="dl-horizontal"><dt>Ubicación</dt><dd>{{ com.ubicacion }}</dd></dl>
-   <dl class="dl-horizontal"><dt>Sede</dt><dd>{{ com.sede }}</dd></dl>
-   <dl class="dl-horizontal"><dt>Fecha</dt><dd>{{ com.fecha|date('d/m/Y') }}</dd></dl>
-   <dl class="dl-horizontal"><dt>Descripción</dt><dd>{{ com.desc }}</dd></dl>
-   <dl class="dl-horizontal"><dt>Nivel</dt><dd>{{ com.nivel }}</dd></dl>
-   <dl class="dl-horizontal"><dt>Federación</dt><dd>{{ com.feder }}</dd></dl>
-   <dl class="dl-horizontal"><dt>Web</dt><dd><a href="{{ com.web }}">{{ com.web }}</a></dd></dl>
-   <dl class="dl-horizontal"><dt>Email</dt><dd><a href="mailto:{{ com.email }}">{{ com.email }}</a></dd></dl>
-   <dl class="dl-horizontal"><dt>Cartel</dt><dd>{{ com.cartel }}</dd></dl>
-   <dl class="dl-horizontal"><dt>Es federado</dt><dd>{{ com.esfeder }}</dd></dl>
-   <dl class="dl-horizontal"><dt>Es oficial</dt><dd>{{ com.esoficial }}</dd></dl>
+    
+   <div class="row">
+      <div class="col-xs-12 col-sm-4">
+         <p class="text-center"><strong>Cartel</strong></p>
+         <img src="/www/web/bundles/atletismo/images/ejemplo.jpg" alt="{{ com.nombre }}" class="img-responsive">
+      </div>
+      <div class="col-xs-12 col-sm-8">
+         <table class="table table-responsive">
+            <tbody>
+               <tr><td><strong>Tipo:</strong></td><td>AIRE LIBRE</td></tr>
+               <tr><td><strong>Ubicacion:</strong></td><td>{{ com.ubicacion }}</td></tr>
+               <tr><td colspan="2"><strong>Descripción:</strong></td></tr>
+               <tr><td colspan="2"><p>{{ com.desc }}</p></td></tr>
+               <tr><td><strong>Fecha de comienzo:</strong></td><td>{% if com.fecha is null %} <em>Sin fecha</em> {% else %} {{ com.fecha|date('d/m/Y') }} {% endif %}</td></tr>
+               <tr><td><strong>Página web:</strong></td><td><strong>Correo electónico de contacto:</strong></td></tr>
+               <tr><td><a href="{{ com.web }}">{{ com.web }}</a></td><td><a href="mailto:{{ com.email }}">{{ com.email }}</a></td></tr>
+            </tbody>
+         </table>
+         <table class="table table-condensed table-responsive">
+            <tbody>
+               <tr><td><strong>Sede:</strong></td><td>{{ com.sede }}</td>
+               <td><strong>Nivel:</strong></td><td>{{ com.nivel }}</td>
+               <td><strong>Federación:</strong></td><td>{{ com.feder }}</td></tr>
+            </tbody>
+         </table>
+         {% if com.esfeder is same as(true) %}
+         <p class="text-center"><strong>PRUEBA FEDERADA</strong></p>
+         {% elseif com.esoficial is same as(true) %}
+         <p class="text-center"><strong>PRUEBA OFICIAL DEL CLUB</strong></p>
+         {% endif %}
+         <a type="button" class="btn btn-m btn-default" href="../"><span class="glyphicon glyphicon-menu-left"></span>Volver</a>
+      </div>
+   </div>
+         
+         
+         
+         =======================
+         <dl class="dl-horizontal"><dt>Cartel</dt><dd>{{ com.cartel }}</dd></dl>
+         <dl class="dl-horizontal"><dt>Es federado</dt><dd>{{ com.esfeder }}</dd></dl>
+         <dl class="dl-horizontal"><dt>Es oficial</dt><dd>{{ com.esoficial }}</dd></dl>
+
    
-   <a type="button" class="btn btn-m btn-default" href="../"><span class="glyphicon glyphicon-menu-left"></span>Volver</a>
    
 {% endblock %}
 
